fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,14 @@ figure {
     margin-right: auto;
 }
 
+.center {
+    text-align: center;
+}
+
 .site-title {
+    color: rgb(6, 53, 156);
+}
+
+.small-site-title {
     color: cornflowerblue;
 }
